Centered the superhero image.

--- a/SuperHeros/Views/SuperHero/Index.cshtml
+++ b/SuperHeros/Views/SuperHero/Index.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Index</h2>
 
-<img src="~/Content/punisher.jpg" alt="punisher">
+<img src="~/Content/punisher.jpg" class="center-block img-circle img-responsive " alt="Cinque Terre">
 
 
 <p>
